--- a/webportfolio/index.html
+++ b/webportfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My 2026 Plan</title>
+  <title>My 2026 Book</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,59 +10,69 @@
 <div class="book-wrapper">
   <div class="book">
 
-    <div class="page active cover">
-      <h1>My 2026 Plan</h1>
-      <p>Turning plans into reality.</p>
+    <!-- Front cover -->
+    <div class="page cover" id="front-cover">
+      <h1>My 2026 Plans</h1>
       <button class="next">→</button>
     </div>
 
-    <div class="page">
-      <h2>About Me</h2>
-      <p>I am building myself step by step.</p>
-      <div class="nav">
-        <button class="prev">←</button>
-        <button class="next">→</button>
+    <!-- Inner spreads -->
+    <div class="spread">
+      <div class="page left white"></div>
+      <div class="page right white lined">
+        <h2>About Me</h2>
+        <p>I am focused on learning, building projects, and improving myself step by step.</p>
+        <div class="nav">
+          <button class="prev">←</button>
+          <button class="next">→</button>
+        </div>
       </div>
     </div>
 
-    <div class="page">
-      <h2>Skills to Learn</h2>
-      <ul>
-        <li>HTML, CSS, JS</li>
-        <li>Database Design</li>
-        <li>UI / UX</li>
-      </ul>
-      <div class="nav">
-        <button class="prev">←</button>
-        <button class="next">→</button>
+    <div class="spread">
+      <div class="page left white"></div>
+      <div class="page right white lined">
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML, CSS, JS</li>
+          <li>Database Design</li>
+          <li>UI/UX</li>
+        </ul>
+        <div class="nav">
+          <button class="prev">←</button>
+          <button class="next">→</button>
+        </div>
       </div>
     </div>
 
-    <div class="page">
-      <h2>Plans</h2>
-      <p>Daily discipline and consistent effort.</p>
-      <div class="nav">
-        <button class="prev">←</button>
-        <button class="next">→</button>
+    <div class="spread">
+      <div class="page left white"></div>
+      <div class="page right white lined">
+        <h2>Plans</h2>
+        <p>Personal growth, academic consistency, and daily discipline.</p>
+        <div class="nav">
+          <button class="prev">←</button>
+          <button class="next">→</button>
+        </div>
       </div>
     </div>
 
-    <div class="page">
-      <h2>Projects</h2>
-      <p>Portfolio, design systems, experiments.</p>
-      <div class="nav">
-        <button class="prev">←</button>
-        <button class="next">→</button>
+    <div class="spread">
+      <div class="page left white"></div>
+      <div class="page right white lined">
+        <h2>Projects</h2>
+        <p>Portfolio website, mini apps, creative experiments.</p>
+        <div class="nav">
+          <button class="prev">←</button>
+          <button class="next">→</button>
+        </div>
       </div>
     </div>
 
-    <div class="page">
-      <h2>Conclusion</h2>
-      <p>
-        Built page by page.<br>
-        Executed day by day.<br>
-        <strong>2026 is mine.</strong>
-      </p>
+    <!-- Back cover -->
+    <div class="page back" id="back-cover">
+      <h1>Thank You!</h1>
+      <p style="position:absolute; bottom:20px; right:20px;">By: Adarsh Bhaktha.K</p>
       <button class="prev">←</button>
     </div>
 
