--- a/webportfolio/index.html
+++ b/webportfolio/index.html
@@ -19,7 +19,10 @@
       <div class="page left white"></div>
       <div class="page right white lined">
         <h2>About Me</h2>
-        <p>I am focused on learning, building projects, and improving myself step by step.</p>
+        <p>I am focused on learning, building projects, and improving myself step by step.
+           I want to devolop my softskill as well as my technical skills.I will help myself
+            to make this year one of the best year of my life. 
+        </p>
         <div class="nav">
           <button class="prev">←</button>
           <button class="next">→</button>
@@ -32,7 +35,8 @@
       <div class="page right white lined">
         <h2>Skills</h2>
         <ul>
-          <li>HTML, CSS, JS</li>
+          <li>HTML, CSS, JS,C language,
+               C++,Python,Java</li>
           <li>Database Design</li>
           <li>UI/UX</li>
         </ul>
@@ -48,6 +52,7 @@
       <div class="page right white lined">
         <h2>Plans</h2>
         <p>Personal growth, academic consistency, and daily discipline.</p>
+        <p>More focused,Innovative and to be confident.</p>
         <div class="nav">
           <button class="prev">←</button>
           <button class="next">→</button>
@@ -59,7 +64,9 @@
       <div class="page left white"></div>
       <div class="page right white lined">
         <h2>Projects</h2>
-        <p>Portfolio website, mini apps, creative experiments.</p>
+        <p>Portfolio website, mini apps, creative experiments.
+          live games
+        </p>
         <div class="nav">
           <button class="prev">←</button>
           <button class="next">→</button>
